version/stable/_sources/api/ansys/mechanical/stubs/v251/Ansys/ACT/Interfaces/Mechanical/IMechanicalDataModel.rst.txt
.. vale off



:class:`IMechanicalDataModel`
=============================

.. py:class:: ansys.mechanical.stubs.v251.Ansys.ACT.Interfaces.Mechanical.IMechanicalDataModel

   Bases: :py:obj:`object`


   
   Defines the data model of the Mechanical application.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: IMechanicalDataModel

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AnalysisById`
            - AnalysisById method.
          * - :py:attr:`~AnalysisByName`
            - AnalysisByName method.
          * - :py:attr:`~CurrentConsistentUnitFromQuantityName`
            - CurrentConsistentUnitFromQuantityName method.
          * - :py:attr:`~CurrentUnitFromQuantityName`
            - Returns the current unit from a quantity name.
          * - :py:attr:`~GetObjectById`
            - GetObjectById method.
          * - :py:attr:`~GetObjectsByName`
            - GetObjectsByName method.
          * - :py:attr:`~GetObjectsByType`
            - GetObjectsByType method.
          * - :py:attr:`~GetUserObjectById`
            - Gets the user object based on the application id.
          * - :py:attr:`~GetUserObjects`
            - GetUserObjects method.
          * - :py:attr:`~MeshDataByName`
            - MeshDataByName method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AnalysisList`
            - AnalysisList property.
          * - :py:attr:`~AnalysisNames`
            - AnalysisNames property.
          * - :py:attr:`~GeoData`
            - GeoData property.
          * - :py:attr:`~MeshDataNames`
            - MeshDataNames property.
          * - :py:attr:`~ObjectLocation`
            - ObjectLocation property.
          * - :py:attr:`~ObjectTags`
            - Gets the ObjectTags object for the Data Model, which represents the current list of tags visable in the User Interface.
          * - :py:attr:`~ObjectType`
            - ObjectType property.
          * - :py:attr:`~Parent`
            - Parent property.
          * - :py:attr:`~Project`
            - Gets the project object. Main object of the tree of Mechanical.
          * - :py:attr:`~SupportedLocations`
            - SupportedLocations property.
          * - :py:attr:`~Tree`
            - Gets the tree of Mechanical.







Property detail
---------------
.. py:property:: AnalysisList
   :type: Optional[List[Ansys.ACT.Interfaces.Analysis.IAnalysis]]


   
   AnalysisList property.
















   ..
       !! processed by numpydoc !!

.. py:property:: AnalysisNames
   :type: Optional[List[str]]


   
   AnalysisNames property.
















   ..
       !! processed by numpydoc !!

.. py:property:: GeoData
   :type: Optional[Ansys.ACT.Interfaces.Geometry.IGeoData]


   
   GeoData property.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshDataNames
   :type: Optional[List[str]]


   
   MeshDataNames property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectLocation
   :type: Optional[Ansys.ACT.Interfaces.UserObject.ObjectLocationEnum]


   
   ObjectLocation property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectTags
   :type: Optional[Ansys.Mechanical.Application.ObjectTags]


   
   Gets the ObjectTags object for the Data Model, which represents the current list of tags visable in the User Interface. 
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectType
   :type: Optional[Ansys.ACT.Interfaces.UserObject.ObjectTypeEnum]


   
   ObjectType property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Parent
   :type: Optional[Ansys.ACT.Interfaces.DataModel.IDataModelObject]


   
   Parent property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Project
   :type: Optional[Ansys.ACT.Automation.Mechanical.Project]


   
   Gets the project object. Main object of the tree of Mechanical.
















   ..
       !! processed by numpydoc !!

.. py:property:: SupportedLocations
   :type: Optional[Ansys.ACT.Interfaces.UserObject.ObjectLocationEnum]


   
   SupportedLocations property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Tree
   :type: Optional[Ansys.ACT.Automation.Mechanical.Tree]


   
   Gets the tree of Mechanical.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: AnalysisById(id: int) -> Ansys.ACT.Interfaces.Analysis.IAnalysis

   
   AnalysisById method.

   ..
       !! processed by numpydoc !!

.. py:method:: AnalysisByName(name: str) -> Ansys.ACT.Interfaces.Analysis.IAnalysis

   
   AnalysisByName method.

   ..
       !! processed by numpydoc !!

.. py:method:: CurrentConsistentUnitFromQuantityName(quantityName: str) -> str

   
   CurrentConsistentUnitFromQuantityName method.

   ..
       !! processed by numpydoc !!

.. py:method:: CurrentUnitFromQuantityName(quantityName: str) -> str

   
   Returns the current unit from a quantity name.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectById(id: int) -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   GetObjectById method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectsByName(name: str) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   GetObjectsByName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectsByType(type: IMechanicalDataModel.GetObjectsByType.type) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   GetObjectsByType method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetUserObjectById(id: int) -> Ansys.ACT.Interfaces.UserObject.IUserObject

   
   Gets the user object based on the application id.

   ..
       !! processed by numpydoc !!

.. py:method:: GetUserObjects(extNameOrGUID: str) -> Iterable[Ansys.ACT.Interfaces.UserObject.IUserObject]

   
   GetUserObjects method.

   ..
       !! processed by numpydoc !!

.. py:method:: MeshDataByName(name: str) -> Ansys.ACT.Interfaces.Mesh.IMeshData

   
   MeshDataByName method.

   ..
       !! processed by numpydoc !!



.. vale on